# rustsega

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust.yml
projects/emscripten/.cargo/: config.toml
src/: emscripten.rs  main.rs
src/sega/: clocks.rs  inputs.rs  interruptor.rs  interuptor.rs  mod.rs  ports.rs  sega.rs
src/sega/audio/: sound.rs  soundchannel.rs
src/sega/cpu/: core.rs  extended_instruction_set.rs  flagtables.rs  instruction_set.rs  instructions.rs  mod.rs  pc_state.rs  status_flags.rs
src/sega/graphics/: display.rs  mod.rs  vdp.rs
src/sega/memory/: cartridge.rs  memory.rs
