[package]
name = "rustsega"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
# Enable optimisations in debug mode (keep all other settings/checks)
opt-level = 2

[profile.release]
debug = true
lto = true
codegen-units = 1
target-cpu="native"
panic="abort"

[dependencies]
bitfield = "0.14.0"
sdl2 = "0.35"
rand = "0.8.4"
clap = { version = "4.0.18", features = ["derive"] }
