# webassembly/empscripten build details go in: projects/emscripten/.cargo/config.toml)
# build via: (cd projects/emscripten/ && cargo build --release)

[package]
name = "rustsega"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
# Enable optimisations in debug mode (keep all other settings/checks)
opt-level = 2

[target.'cfg(target_os="emscripten")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
codegen-units = 1
panic="abort"

[dependencies]
bitfield = "0.14.0"
sdl2 = "0.35.0"
rand = "0.8.4"
argh = "0.1.9"
rustfmt = "0.10.0"
